# ash-experiments

./: Cargo.toml  LICENSE  README.md  compute.comp  compute.spv  dingus.raw  fragment.frag  fragment.spv  vertex.spv  vertex.vert
examples/compute/: main.rs
examples/dingus_mesh/: dingus_app.rs  fragment.frag  fragment.spv  main.rs  vertex.spv  vertex.vert
src/: allocator.rs  app.rs  attachment.rs  buffer.rs  command_buffer.rs  command_pool.rs  compute_pipeline.rs  compute_stage.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  framebuffer.rs  graphics_pipeline.rs  image.rs  lib.rs  load_vertex_buffer_from_file.rs  main.rs  main_device_queue.rs  output_stage.rs  render_stage.rs  renderpass.rs  semaphore.rs  shader_module.rs  subpass.rs  swapchain.rs  vertex_attributes.rs  vertex_buffer.rs  window.rs
src/buffer/: buffer.rs
src/compute/: compute_pipeline.rs  compute_stage.rs  mod.rs
src/core/: command_buffer.rs  command_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  helpers.rs  main_device_queue.rs  memory_barrier.rs  memory_properties.rs  mod.rs  scheduler.rs  semaphore.rs  shader_module.rs  toolkit.rs
src/graphics/: attachment.rs  framebuffer.rs  graphics_pipeline.rs  mod.rs  render_stage.rs  renderpass.rs  subpass.rs  vertex_attributes.rs  vertex_buffer.rs
src/image/: aspect_from_format.rs  filtering.rs  image.rs  image_format.rs  image_from_data.rs  image_from_file.rs  image_from_full.rs  image_from_swapchain.rs  mod.rs  sampler.rs  transition_image_layout.rs
src/memory/: memory_chunk.rs  memory_manager.rs  mod.rs
(+4 files in other folders)
