[package]
name = "vengine-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.7", features = ["rwh_06"] }
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
image = "0.25.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.9"

[lints.clippy]
map_unwrap_or = "deny"
unwrap_used = "deny"
expect_used = "deny"